# klogr

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
examples/: 01_basic_logger.py  02_pretty_tables.py  03_progress_tracking.py  04_caching.py  05_path_helpers.py  README.md
klogr/: __init__.py  cache.py  logger.py  time.py
klogr/path/: __init__.py  env.py  io.py  ops.py  query.py
