[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = ["pre-commit>=4.0.1"]

[project]
authors = [{email = "me@afromero.co", name = "Andres Romero"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Logging"
]
dependencies = [
  "beartype>=0.21.0",
  "jaxtyping>=0.3.2",
  "natsort>=8.4.0",
  "pydantic>=2.10.2",
  "python-dotenv>=0.19.0",
  "rich>=13.9.4",
  "sha256sum>=2022.6.11"
]
description = "Batteries-included structured logger for Python data/ML projects, built on Rich."
keywords = ["cache", "logging", "ml", "path", "rich", "s3"]
license = "MIT"
license-files = ["LICENSE.md"]
name = "klogr"
readme = "README.md"
requires-python = ">=3.10"
version = "0.2.0"

[project.urls]
Changelog = "https://github.com/affromero/klogr/blob/main/CHANGELOG.md"
Homepage = "https://github.com/affromero/klogr"
Issues = "https://github.com/affromero/klogr/issues"

[tool.hatch.build.targets.wheel]
packages = ["klogr"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
enable_error_code = ["ignore-without-code"]
explicit_package_bases = true
follow_imports = "silent"
no_implicit_reexport = true
plugins = ["pydantic.mypy"]
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
exclude = ["logs/"]
indent-width = 4
line-length = 79
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 79
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
fixable = ["ALL"]
ignore = ["ANN401", "C901", "COM812", "D100", "D101", "D104", "D203", "D205", "D211", "D213", "D401", "D404", "D417", "E501", "ERA001", "F722", "F821", "G004", "ISC001", "N812", "PERF203", "PERF401", "PLR0911", "PLR0912", "PLR0913", "PLR0915", "PLR2004", "PLW2901", "RUF012", "S603", "S607", "SIM115", "SLF001", "T201", "TC010", "TRY301"]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"examples/*.py" = ["INP001"]

[tool.tomlsort]
all = true
